syntax = "proto3";
package records;

// 一般会有 Service XXRequest XXResponse
service Recorder {
  rpc SendMessage(RecordRequest) returns (RecordResponse);
}

message RecordRequest {
  string user_name = 1;
  uint32 user_age = 2;
}

message RecordResponse {
  bool successful = 1;
  string message = 2;    // 一般为user_name和user_age的组合语句。实际的话一般是查数据库或者是reqwest
}